--- a/src/template.html
+++ b/src/template.html
@@ -78,19 +78,27 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Hello, welcome to my portfolio! My name is Kevin. I graduated
+                from UCLA and worked for different companies, each with its own
+                unique challenges that helped me grow as a developer. From
+                interviewing applicants for the engineering team, to being
+                mentored directly under a Google product manager, I have been
+                fortunate to learn as much as I did from my previous work
+                experiences.
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I take web development seriously. To give an example, one of my
+                unique tendencies is to wake up at 4am every morning and use
+                those extra hours to advance my knowledge and improve my skills.
+                Regardless of what technology stack is used, I am confident I
+                will become a valuable employee in a short span of time.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="https://drive.google.com/open?id=1Om1Jut3FZDJP5vjEYRJkbCEc4zy-f8eN"
+                >
                   View Resume
                 </a>
               </span>
@@ -116,11 +124,8 @@
                 <h3 class="project-wrapper__text-title">Face Detector</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Face Detector is a machine learning app that detects faces in photos. Simply
+                    copy and paste the url of a picture and see the magic happen before your eyes!
                   </p>
                 </div>
                 <a
@@ -130,7 +135,7 @@
                 >
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kevinyooky/Robo-Buddies">
                   Source Code
                 </a>
               </div>
@@ -230,13 +235,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Email me to schedule an interview
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:kevinyoo.y@gmail.com"
+            >Schedule</a
           >
         </div>
       </div>
@@ -250,16 +255,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/kyoo/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/kevinyooky" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
