--- a/src/template.html
+++ b/src/template.html
@@ -87,7 +87,7 @@
                 experiences.
               </p>
               <p class="about-wrapper__info-text">
-                I take web development seriously. To give an example, one of my
+                I take web development seriously. One of my
                 unique tendencies is to wake up at 4am every morning and use
                 those extra hours to advance my knowledge and improve my skills.
                 Regardless of what technology stack is used, I am confident I
