--- a/src/template.html
+++ b/src/template.html
@@ -86,18 +86,18 @@
                 fortunate to learn as much as I did from my previous work
                 experiences.
               </p>
-              <p class="about-wrapper__info-text">
-                I take web development seriously. One of my
-                unique tendencies is to wake up at 4am every morning and use
-                those extra hours to advance my knowledge and improve my skills.
-                Regardless of what technology stack is used, I am confident I
-                will become a valuable employee in a short span of time.
-              </p>
+              <!-- <p class="about-wrapper__info-text">
+                I take web development seriously. One of my unique tendencies is
+                to wake up at 4am every morning and use those extra hours to
+                advance my knowledge and improve my skills. Regardless of what
+                technology stack is used, I am confident I will become a
+                valuable employee in a short span of time.
+              </p> -->
               <span class="d-flex mt-3">
                 <a
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="https://drive.google.com/open?id=1Om1Jut3FZDJP5vjEYRJkbCEc4zy-f8eN"
+                  href="../src/resume/resume.html"
                 >
                   View Resume
                 </a>
@@ -124,8 +124,12 @@
                 <h3 class="project-wrapper__text-title">Face Detector</h3>
                 <div>
                   <p class="mb-4">
-                    Face Detector is a machine learning app that detects faces in photos. Simply
-                    copy and paste the url of a picture and see the magic happen before your eyes!
+                    Face Detector is a machine learning app that detects faces
+                    in photos. Simply copy and paste the url of a picture and
+                    see the magic happen before your eyes!
+                  </p>
+                  <p>
+                    (May take couple seconds to load)
                   </p>
                 </div>
                 <a
@@ -135,7 +139,11 @@
                 >
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kevinyooky/Robo-Buddies">
+                <a
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kevinyooky/Robo-Buddies"
+                >
                   Source Code
                 </a>
               </div>
