--- a/src/template.html
+++ b/src/template.html
@@ -97,7 +97,7 @@
                 <a
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="resume.html"
+                  href="resume/resume.html"
                 >
                   View Resume
                 </a>
