--- a/src/template.html
+++ b/src/template.html
@@ -81,9 +81,9 @@
                 Hello, welcome to my portfolio! My name is Kevin. I graduated
                 from UCLA and worked for different companies, each with its own
                 unique challenges that helped me grow as a developer. From
-                taking the lead role of developer intens, to being
-                mentored directly under a technology professional from Google, I have been
-                fortunate to learn as much as I did from my previous work
+                taking the lead role of developer intens, to being mentored
+                directly under a technology professional from Google, I have
+                been fortunate to learn as much as I did from my previous work
                 experiences.
               </p>
               <!-- <p class="about-wrapper__info-text">
@@ -93,15 +93,15 @@
                 technology stack is used, I am confident I will become a
                 valuable employee in a short span of time.
               </p> -->
-              <span class="d-flex mt-3">
+              <!-- <span class="d-flex mt-3">
                 <a
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="resume/resume.html"
+                  href="../src/resume/resume.html"
                 >
                   View Resume
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
