--- a/src/template.html
+++ b/src/template.html
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">
-            Project
+            Projects
           </h2>
 
           <!-- Each .row is a project -->
@@ -142,7 +142,7 @@
                 <a
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/kevinyooky/Robo-Buddies"
+                  href="https://github.com/kevinyooky/FaceDetector"
                 >
                   Source Code
                 </a>
@@ -156,6 +156,46 @@
                 >
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/project.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">RoboBuddies</h3>
+                <div>
+                  <p class="mb-4">
+                    RoboBuddies has your favorite buddies with their names and contact information!
+                    Simply search for your favorite buddy in the search box. Built using React and Redux.
+                  </p>
+                </div>
+                <a
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://salty-lowlands-19391.herokuapp.com/"
+                >
+                  See Live
+                </a>
+                <a
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kevinyooky/Robo-Buddies"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a
+                  href="https://salty-lowlands-19391.herokuapp.com/"
+                  target="_blank"
+                >
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/project2.png" />
                   </div>
                 </a>
               </div>
