--- a/src/template.html
+++ b/src/template.html
@@ -201,6 +201,46 @@
               </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Wilo</h3>
+                <div>
+                  <p class="mb-4">
+                    Wilo is a social platform allowing users to stream and watch streamers. This application 
+                    has been built using React, Redux, OBS, and FLV player. 
+                  </p>
+                </div>
+                <!-- <a
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://salty-lowlands-19391.herokuapp.com/"
+                >
+                  See Live
+                </a> -->
+                <a
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kevinyooky/wilo"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a
+                  href="https://github.com/kevinyooky/wilo"
+                  target="_blank"
+                >
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/project3.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
