--- a/src/template.html
+++ b/src/template.html
@@ -175,7 +175,7 @@
                 <a
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://salty-lowlands-19391.herokuapp.com/"
+                  href="https://kevinyooky-robobuddies.herokuapp.com/"
                 >
                   See Live
                 </a>
