--- a/src/template.html
+++ b/src/template.html
@@ -93,15 +93,15 @@
                 technology stack is used, I am confident I will become a
                 valuable employee in a short span of time.
               </p> -->
-              <!-- <span class="d-flex mt-3">
+              <span class="d-flex mt-3">
                 <a
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="../src/resume/resume.html"
+                  href="https://kevinyooky-resume.herokuapp.com/"
                 >
                   View Resume
                 </a>
-              </span> -->
+              </span>
             </div>
           </div>
         </div>
