--- a/src/template.html
+++ b/src/template.html
@@ -129,7 +129,7 @@
                     see the magic happen before your eyes!
                   </p>
                   <p>
-                    (May take couple seconds to load)
+                    (May take 1 minute to load)
                   </p>
                 </div>
                 <a
@@ -171,6 +171,9 @@
                     RoboBuddies has your favorite buddies with their names and contact information!
                     Simply search for your favorite buddy in the search box. Built using React and Redux.
                   </p>
+                  <p>
+                  (May take 1 minute to load)
+                </p>
                 </div>
                 <a
                   target="_blank"
