--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
                 Hello, welcome to my portfolio! My name is Kevin. I graduated
                 from UCLA and worked for different companies, each with its own
                 unique challenges that helped me grow as a developer. From
-                taking the lead role of developer intens, to being mentored
+                taking the lead role of developers, to being mentored
                 directly under a technology professional from Google, I have
                 been fortunate to learn as much as I did from my previous work
                 experiences.
