--- a/src/template.html
+++ b/src/template.html
@@ -61,7 +61,7 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title">
-          About me
+          About 
         </h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
