--- a/src/template.html
+++ b/src/template.html
@@ -26,6 +26,20 @@
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
+      <header class="showcase">
+        <div class="showcase-top">
+          <!-- <img src="img/logo.png" alt="Netflix" /> -->
+          <!-- <a href="#" class="btn btn-rounded">Sign In</a> -->
+        </div>
+        <div class="showcase-content">
+          <h1>Kevin Yoo</h1>
+          <p>Web Developer</p>
+          <a href="#" class="btn btn-lg">
+            Schedule an Interview today <i class="fas fa-chevron-right btn-icon"></i>
+          </a>
+        </div>
+      
+      </header>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
