--- a/src/template.html
+++ b/src/template.html
@@ -40,6 +40,16 @@
         </div>
       
       </header>
+      <section class="about">
+        <div class="container">
+          <h1>About</h1>
+          <p>After graduating from a rigorous coding bootcamp, I moved onto work in developer positions to build on my
+            skillsets. My favorite aspect of coding is the unending journey of learning and growth. In my development career,I
+            find myself constantly learn new technologies and becoming a better learner. Having worked in both front-end,
+            back-end, as well as teaching these concepts as a coding instructor, I am a well rounded developer who can take on
+            difficult challenges. I may not have all the answers, but I know how to find them.</p>
+        </div>
+      </section>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
