added img and js

--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
           <!-- <a href="#" class="btn btn-rounded">Sign In</a> -->
         </div>
         <div class="showcase-content">
-          <h1>Kevin Yoo</h1>
+          <h1>Kevin </h1>
           <p>Web Developer</p>
           <a href="#" class="btn btn-lg">
             Schedule an Interview today <i class="fas fa-chevron-right btn-icon"></i>
