--- a/src/template.html
+++ b/src/template.html
@@ -33,7 +33,7 @@
         </div>
         <div class="showcase-content">
           <h1>Kevin </h1>
-          <p>Web Developer</p>
+          <p> Developer</p>
           <a href="#" class="btn btn-lg">
             Schedule an Interview today <i class="fas fa-chevron-right btn-icon"></i>
           </a>
