--- a/src/template.html
+++ b/src/template.html
@@ -84,7 +84,7 @@
               </iframe>
               <h3>DETAILS</h3>
               <ul>
-                <li>- Streaming Application </li>
+                <li>- Streaming App </li>
               </ul>
             </div>
           </div>
